@@ -13,12 +13,7 @@ using namespace SphereSim;
 std::mutex Console::mutex = {};
 
 Console::Console()
-    :color(Color::white), font(0), stream()
-{
-}
-
-Console::Console(unsigned short c, unsigned short f)
-    :color(c), font(f), stream()
+    :color(white), font(light), stream()
 {
 }
 
@@ -27,24 +22,53 @@ Console::~Console()
     flush();
 }
 
+void Console::beginFormatting()
+{
+    stream<<"\x1b[3";
+    stream<<color;
+    if (font == bold)
+    {
+        stream<<";1";
+    }
+    stream<<"m";
+}
+
+void Console::endFormatting()
+{
+    stream<<"\x1b[0m";
+}
+
+Console& Console::operator<<(Format f)
+{
+    if (f != font)
+    {
+        font = f;
+        endFormatting();
+        beginFormatting();
+    }
+    return *this;
+}
+
+Console& Console::operator<<(Color c)
+{
+    if (c > white)
+    {
+        c = white;
+    }
+    if (c != color)
+    {
+        color = c;
+        endFormatting();
+        beginFormatting();
+    }
+    return *this;
+}
+
 void Console::flush()
 {
     std::unique_lock<std::mutex> lock(mutex);
+    endFormatting();
     std::string str = stream.str();
     stream.str(std::string());
-    if (color<=Color::white)
-    {
-        std::ostringstream stream2;
-        stream2<<"\x1b[3";
-        stream2<<color;
-        if (font == Format::bold)
-        {
-            stream2<<";1";
-        }
-        stream2<<"m";
-        stream2<<str;
-        stream2<<"\x1b[0m";
-        str = stream2.str();
-    }
     std::cout<<std::flush<<str<<std::flush;
 }
